--- a/26-Front-End/front-end.html
+++ b/26-Front-End/front-end.html
@@ -54,12 +54,12 @@
         <div class="row justify-content-center gy-3">
 
         <div class="col-md-4 col-lg-3">
-         <div class="card border-0 rounded">
+        <div class="card border-0 rounded">
         <div class="card-body">
         <img src="Images/midnight.jpg" height="434px" class="w-100 rounded" alt="Midnight">
         <h5 class="card-title">Molioboro at Midnight</h5>
         <p class="card-text">Book by Skysphire</p>
-        <span class="btn btn-warning btn-sm">Rp.34.999/Minggu</span>
+        <span class="btn btn-warning btn-sm">Rp.14.999/Minggu</span>
         </div>
         </div>
         </div>
@@ -81,7 +81,7 @@
         <img src="Images/bahagia itu sederhana.webp" height="434px" class="w-100 rounded" alt="Cappucino">
         <h5 class="card-title">Bahagia itu Sederhana</h5>
         <p class="card-text">Book by Francois Mercer</p>
-        <span class="btn btn-warning btn-sm">Rp.19.999/Minggu</span>
+        <span class="btn btn-warning btn-sm">Rp.9.999/Minggu</span>
         </div>
         </div>
         </div>
@@ -92,10 +92,98 @@
         <img src="Images/menyapa senja by Juliana Silva.webp" height="434px" class="w-100 rounded" alt="Americano">
         <h5 class="card-title">Menyapa Senja</h5>
         <p class="card-text">Book by Juliana Silva</p>
-        <span class="btn btn-warning btn-sm">Rp.29.999/Minggu</span>
+        <span class="btn btn-warning btn-sm">Rp.9.999/Minggu</span>
         </div>
         </div>
         </div>
+
+        <div class="col-md-4 col-lg-3">
+          <div class="card border-0 rounded">
+          <div class="card-body">
+          <img src="Images/gadis dari galaksi tak dikenal by samira hadid.webp" height="434px" class="w-100 rounded" alt="Americano">
+          <h5 class="card-title" >Gadis Dari Galaksi Tak Dikenal</h5>
+          <p class="card-text">Book by Samira Hadid</p>
+          <span class="btn btn-warning btn-sm">Rp.2.999/Minggu</span>
+          </div>
+          </div>
+          </div>
+
+          <div class="col-md-4 col-lg-3">
+            <div class="card border-0 rounded">
+            <div class="card-body">
+            <img src="Images/dengan kulit seperti bakung.webp" height="434px" class="w-100 rounded" alt="Americano">
+            <h5 class="card-title">Dengan Kulit Seperti Bakung</h5>
+            <p class="card-text">Book by Riko Pantoso</p>
+            <span class="btn btn-warning btn-sm">Rp.9.999/Minggu</span>
+            </div>
+            </div>
+            </div>
+
+            <div class="col-md-4 col-lg-3">
+              <div class="card border-0 rounded">
+              <div class="card-body">
+              <img src="Images/matahari terbenam dengan anita by gladis firmansyah.webp" height="434px" class="w-100 rounded" alt="Americano">
+              <h5 class="card-title">Matahari Terbenam dengan Anita</h5>
+              <p class="card-text">Book by Gladis Firmansyah</p>
+              <span class="btn btn-warning btn-sm">Rp.3.999/Minggu</span>
+              </div>
+              </div>
+              </div>
+
+              <div class="col-md-4 col-lg-3">
+                <div class="card border-0 rounded">
+                <div class="card-body">
+                <img src="Images/ombak pecah di pesisir batavia by biru harun.webp" height="434px" class="w-100 rounded" alt="Americano">
+                <h5 class="card-title">Ombak Pecah Di Pesisir Batavia</h5>
+                <p class="card-text">Book by Biru Harun</p> 
+                <span class="btn btn-warning btn-sm">Rp.5.999/Minggu</span>
+                </div>
+                </div>
+                </div>
+
+                <div class="col-md-4 col-lg-3">
+                  <div class="card border-0 rounded">
+                  <div class="card-body">
+                  <img src="Images/kabut hutan semeru by J. Pratama.webp" height="434px" class="w-100 rounded" alt="Americano">
+                  <h5 class="card-title">Kabut Hutan Semeru</h5>
+                  <p class="card-text">Book by J. Pratama</p>
+                  <span class="btn btn-warning btn-sm">Rp.7.999/Minggu</span>
+                  </div>
+                  </div>
+                  </div>
+
+                  <div class="col-md-4 col-lg-3">
+                    <div class="card border-0 rounded">
+                    <div class="card-body">
+                    <img src="Images/tentang rasa by cahaya dewi.webp" height="434px" class="w-100 rounded" alt="Americano">
+                    <h5 class="card-title">Tentang Rasa</h5>
+                    <p class="card-text">Book by Cahaya Dewi</p>
+                    <span class="btn btn-warning btn-sm">Rp.6.999/Minggu</span>
+                    </div>
+                    </div>
+                    </div>
+
+                    <div class="col-md-4 col-lg-3">
+                      <div class="card border-0 rounded">
+                      <div class="card-body">
+                      <img src="Images/perahu kertas by cahaya dewi.webp" height="434px" class="w-100 rounded" alt="Americano">
+                      <h5 class="card-title">Parahu Kertas</h5>
+                      <p class="card-text">Book by Cahaya Dewi</p>
+                      <span class="btn btn-warning btn-sm">Rp.8.999/Minggu</span>
+                      </div>
+                      </div>
+                      </div>
+
+                      <div class="col-md-4 col-lg-3">
+                        <div class="card border-0 rounded">
+                        <div class="card-body">
+                        <img src="Images/menanti restu langit by makhasin.jpg" height="434px" class="w-100 rounded" alt="Americano">
+                        <h5 class="card-title">Menanti Restu Langit</h5>
+                        <p class="card-text">Book by Makhasin</p>
+                        <span class="btn btn-warning btn-sm">Rp.10.999/Minggu</span>
+                        </div>
+                        </div>
+                        </div>
 
         </div>
         </div>
